--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -16,6 +16,23 @@
     background-color: #4e52b4; /* hover:bg-blue-600 */
   }
   
+  .button2 {
+    width: 12rem;
+    padding-left: 1.5rem; /* px-6 */
+    padding-right: 1.5rem; /* px-6 */
+    padding-top: 0.5rem; /* py-2 */
+    padding-bottom: 0.5rem; /* py-2 */
+    background-color: #6368e8; /* bg-blue-500 */
+    color: white; /* text-white */
+    border-radius: 0.5rem; /* rounded-lg */
+    
+    box-shadow: 0 4px 6px rgba(120, 117, 117, 0.1); /* shadow-md */
+    transition: all 0.2s;
+  }
+  
+  .button2:hover {
+    background-color: #4e52b4; /* hover:bg-blue-600 */
+  }
 
   .center{
     display: flex;
@@ -38,3 +55,40 @@
 .animate-progress {
   animation: progress 1s ease-in-out infinite;
 }
+
+td{
+  width: 15rem;
+}
+
+.services-modal-content {
+  position: relative;
+  background-color: #fff;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+}
+
+.services-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  z-index: 10;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.4s;
+}
+
+.active-modal {
+  visibility: visible;
+  opacity: 1;
+}
+
+
+
+ 
